# mylang-ocaml

./: README.adoc  dune-project  file.my  makefile
_build/: .db  .digest-db  log
_build/default/: mylang-ocaml.dune-package  mylang-ocaml.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: environment.ml  expr.ml  mylang_ocaml.ml-gen  stmt.ml  token.ml
_build/default/lib/.merlin-conf/: lib-mylang_ocaml
_build/default/lib/.mylang_ocaml.objs/: mylang_ocaml__Ast_printer.impl.all-deps  mylang_ocaml__Ast_printer.impl.d  mylang_ocaml__Environment.impl.d  mylang_ocaml__Expr.impl.all-deps  mylang_ocaml__Expr.impl.d  mylang_ocaml__Interpreter.impl.d  mylang_ocaml__Stmt.impl.d
_build/default/lib/.mylang_ocaml.objs/byte/: mylang_ocaml.cmi  mylang_ocaml.cmo  mylang_ocaml.cmt  mylang_ocaml__Ast_printer.cmi  mylang_ocaml__Ast_printer.cmo  mylang_ocaml__Ast_printer.cmt  mylang_ocaml__Expr.cmi  mylang_ocaml__Expr.cmo  mylang_ocaml__Expr.cmt  mylang_ocaml__Stmt.cmi  mylang_ocaml__Stmt.cmo  mylang_ocaml__Stmt.cmt  mylang_ocaml__Token.cmi  mylang_ocaml__Token.cmo  mylang_ocaml__Token.cmt
_build/default/lib/.mylang_ocaml.objs/native/: mylang_ocaml.cmx  mylang_ocaml__Ast_printer.cmx  mylang_ocaml__Expr.cmx  mylang_ocaml__Stmt.cmx  mylang_ocaml__Token.cmx
_build/default/test/.merlin-conf/: exe-test_mylang_ocaml
_build/default/test/.test_mylang_ocaml.eobjs/byte/: dune__exe__Test_mylang_ocaml.cmi  dune__exe__Test_mylang_ocaml.cmti
lib/: ast_printer.ml  dune  environment.ml  errors.ml  interpreter.ml  parser.ml  scanner.ml  stmt.ml
test/: dune
(+4 files in other folders)
